crates/vespertide-query/src/snapshots/vespertide_query__builder__tests__remove_fk_unique_index_then_drop_column_all_orderings@rm_col_ix_fk_uq_mysql.snap
---
source: crates/vespertide-query/src/builder/mod.rs
expression: sql
---
-- Action 0: RemoveConstraint { table: "product", constraint: Index { name: None, columns: ["category_id"] } }
DROP INDEX `ix_product__category_id` ON `product`

-- Action 1: RemoveConstraint { table: "product", constraint: ForeignKey { name: None, columns: ["category_id"], ref_table: "category", ref_columns: ["id"], on_delete: Some(Cascade), on_update: None, orphan_strategy: NullifyOrphans } }
ALTER TABLE `product` DROP FOREIGN KEY `fk_product__category_id`

-- Action 2: RemoveConstraint { table: "product", constraint: Unique { name: None, columns: ["category_id"], strategy: DeleteDuplicates { keep: First } } }
ALTER TABLE `product` DROP INDEX `uq_product__category_id`

-- Action 3: DeleteColumn { table: "product", column: "category_id" }
ALTER TABLE `product` DROP COLUMN `category_id`
